Fix EditButton props bug and removed z-index in SkipperProfile

--- a/src/css/SkipperProfile.css
+++ b/src/css/SkipperProfile.css
@@ -45,7 +45,6 @@ details>summary {
     display: flex;
     justify-content: space-between;
     position: relative;
-    z-index: -1;
 }
 .edit-profile {
     position: absolute;
